--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^24.3.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
@@ -16,6 +17,7 @@
     "vite": "^7.1.2"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.13"
+    "@tailwindcss/vite": "^4.1.13",
+    "zod": "^4.1.5"
   }
 }
