make github OAuth

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
 JWT_SECRET=supersecretcode
+GITHUB_CLIENT_ID=Ov23liQCKTRwL2Z6zOvw
+GITHUB_CLIENT_SECRET=4ec68356167ffd578829832690e572996c8581e1
+GITHUB_REDIRECT_URI=https://localhost:3443/api/auth/github/callback
+FRONTEND_ORIGIN=https://localhost:5173
